agregamos tablas de las materias de la carrera

--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Índice - IDGS UTSC</title>
+    <link rel="stylesheet" href="estilos.css">
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-    <h1>hola desde html</h1>
+    <h1>Ingeniería en Desarrollo y Gestión de Software (IDGS)</h1>
+
+    <!-- 1. TABLA DE MATERIAS -->
+    <h2>Materias de la carrera</h2>
+    <table>
+        <tr>
+            <th>Cuatrimestre</th>
+            <th>Materia</th>
+            <th>Docente</th>
+        </tr>
+        <tr>
+            <td>1°</td>
+            <td>Administracion del Tiempo</td>
+            <td>Francisco Javier Rojas Ramos</td>
+        </tr>
+        <tr>
+            <td>1°</td>
+            <td>Arquitectura de software</td>
+            <td>Marco Antonio Ortega Rosales</td>
+        </tr>
+        <tr>
+            <td>2°</td>
+            <td>Experiencia de usuarios</td>
+            <td>Laura Emilia Martinez Lopez</td>
+        </tr>
+        <tr>
+            <td>3°</td>
+            <td>Ingles VI</td>
+            <td>Perla Rodriguez Berrones</td>
+        </tr>
+
+        <tr>
+            <td>3°</td>
+            <td>Seguridad informatica</td>
+            <td>Luisa Leticia Campos Rodriguez</td>
+        </tr>
+    </table>
+
+    <!-- 2. TURNOS Y HORARIOS -->
+    <h2>Turnos y horarios</h2>
+    <p>En la carrera de IDGS existen dos turnos:</p>
+    <ul>
+        <li><b>Matutino:</b> 7:00 a.m. - 1:00 p.m.</li>
+        <li><b>Vespertino:</b> 1:00 p.m. - 7:00 p.m.</li>
+    </ul>
+
+    <!-- 3. IMAGEN DE TSU -->
+    <h2>Imagen de TSU</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/UTSC_logo.png" alt="Logo de la UTSC" width="250">
+
 </body>
 </html>
