agregamos imagen ut

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- 3. IMAGEN DE TSU -->
     <h2>Imagen de TSU</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/UTSC_logo.png" alt="Logo de la UTSC" width="250">
+    <img src="ut.png" alt="Logo de la UTSC" width="250">
 
 </body>
 </html>
